delar av uppgift 1 är klar,

--- a/client/Uppgift1.html
+++ b/client/Uppgift1.html
@@ -5,18 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        body{
-            background-color: brown;
-        }
-        img{
-            float: left;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="Uppgift1.css">
 </head>
 <body>
-    <img src="ChicksHiggis.jpg" alt="">
+    <img src="heh" alt="">
+    <form class="form" action="/form" method="POST">
+        <label for="name">Namn:</label>
+        <input type="name" id="name" placeholder="Skriv in dit namn här" name="namn">
+        <button type="submit">Skicka</button>
+    </form>
 </body>
 </html>
